--- a/deno.json
+++ b/deno.json
@@ -1,27 +1,17 @@
 {
   "tasks": {
-    "start": "deno run -A --watch=sections/,functions/,loaders/,actions/,workflows/,accounts/ dev.ts",
+    "start": "deno run -A --watch=tailwind.css,sections/,functions/,loaders/,actions/,workflows/,accounts/ dev.ts",
+    "gen": "deno run -A dev.ts --gen-only",
     "component": "deno eval 'import \"$live/scripts/component.ts\"'",
     "release": "deno eval 'import \"$live/scripts/release.ts\"'",
+    "update": "deno eval 'import \"$live/scripts/update.ts\"'",
     "check": "deno fmt && deno lint && deno check dev.ts main.ts"
   },
   "githooks": {
     "pre-commit": "check"
   },
-  "lint": {
-    "exclude": [
-      ".frsh",
-      "static/",
-      "README.md"
-    ]
-  },
-  "fmt": {
-    "exclude": [
-      ".frsh",
-      "static/",
-      "README.md"
-    ]
-  },
+  "exclude": ["node_modules", "static/", "README.md"],
+  "nodeModulesDir": true,
   "importMap": "./import_map.json",
   "compilerOptions": {
     "jsx": "react-jsx",
